# final_project_li_ruiqi

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  organized_coronavirus_info.rst
organized_coronavirus_info/: organized_coronavirus_info.py
tests/: test_organized_coronavirus_info.py
